Avance Gramatica.txt
Terminales: { box ball nada
			rx ry rz sx sy sz s tx ty tz cr cg cb d
			num regla . : | & [ ] < > ^ = $ + * / ( )
		}

No terminales {
	Programa
	Reglas
	Main
	UnaRegla
	NombreMain
	NombreRegla
	Elemento
	Elementoand
	Elementobase
	Prim
	Trans
	Numero
	Factor
	Termino
}

Simbolo distinguido: Programa

Producciones:

Programa -> Reglas Main Reglas // Debe haber si o si una regla main

Reglas -> LAMBDA
Reglas -> Reglas Main
Reglas -> Reglas Unaregla

Main -> Nombremain = Elemento

Nombremain -> $
Nombremain -> $.

Unaregla -> Nombreregla=Elemento

Nombreregla -> regla
Nombreregla -> regla.

Elemento -> Elemento | Elementoand
Elemento -> Elementoand

Elementoand -> Elementoand & Elementobase
Elementoand -> Elementobase

Elementobase -> Prim
Elementobase -> Elementobase : Trans
Elementobase -> [ Elemento ]
Elementobase -> Elementobase ^ Numero
Elementobase -> < Elemento >
Elementobase -> Nombreregla
Elementobase -> Nombremain

Prim -> ball
Prim -> box
Prim -> nada

Trans -> rx Numero
Trans -> ry Numero
Trans -> rz Numero
Trans -> s Numero
Trans -> sx Numero
Trans -> sy Numero
Trans -> sz Numero
Trans -> tx Numero
Trans -> ty Numero
Trans -> tz Numero
Trans -> cr Numero
Trans -> cg Numero
Trans -> cb Numero
Trans -> d Numero

Numero -> Numero + Factor
Numero -> Numero - Factor
Numero -> Factor

Factor -> Factor * Termino
Factor -> Factor / Termino
Factor -> Termino

Termino -> num
Termino -> + num
Termino -> - num
Termino -> ( Numero )
Termino -> + ( Numero )
Termino -> - ( Numero )
